--- a/解题模板.md
+++ b/解题模板.md
@@ -4,7 +4,9 @@
 
 
 
-## 1. 矩阵花式遍历 
+## 1. 矩阵
+
+### 花式遍历 
 
 ```python
 def spiralOrder(matrix):
@@ -18,24 +20,24 @@ def spiralOrder(matrix):
     result = []
     
     while top <= bottom and left <= right:
-        # 从左到右
+        # 从左到右遍历行，行不变
         for i in range(left, right + 1):
             result.append(matrix[top][i])
-        top += 1
+        top += 1  # 遍历完移到下一行
         
         # 从上到下
         for i in range(top, bottom + 1):
             result.append(matrix[i][right])
         right -= 1
         
-        if top <= bottom:
-            # 从右到左
+        # 从右到左遍历行  先判断行是否越界
+        if top <= bottom: 
             for i in range(right, left - 1, -1):
                 result.append(matrix[bottom][i])
             bottom -= 1
         
+        # 从下到上遍历列   先判断列是否越界
         if left <= right:
-            # 从下到上
             for i in range(bottom, top - 1, -1):
                 result.append(matrix[i][left])
             left += 1
@@ -98,3 +100,20 @@ class Solution:
         return count
 ```
 
+## 4. 二叉树
+
+### 前中后序遍历
+
+```python
+
+def traverse(root):
+    if root is None:
+        return
+    # 前序位置
+    traverse(root.left)
+    # 中序位置
+    traverse(root.right)
+    # 后序位置
+```
+
+[link](https://labuladong.online/algo/data-structure-basic/binary-tree-traverse-basic/#%E9%80%92%E5%BD%92%E9%81%8D%E5%8E%86-dfs)
