代码随想录  二叉树

--- a/解题模板.md
+++ b/解题模板.md
@@ -102,103 +102,81 @@ class Solution:
 
 ## 4. 二叉树
 
-### 前中后序遍历
-
-```python
-
-def traverse(root):
-    if root is None:
-        return
-    # 前序位置
-    traverse(root.left)
-    # 中序位置
-    traverse(root.right)
-    # 后序位置
-```
-
-[link](https://labuladong.online/algo/data-structure-basic/binary-tree-traverse-basic/#%E9%80%92%E5%BD%92%E9%81%8D%E5%8E%86-dfs)
-
 ### 深度优先遍历DFS
 
-​	1.	**判断递归终止条件**（如节点为空）。
+#### 递归三步骤
 
-​	2.	**对子树进行递归调用**。
+1. 确定递归函数的参数和返回值
+2. 确定终止条件
+3. 确定单层递归的逻辑
 
-​	3.	**处理当前节点逻辑**（如交换左右子树）。
+#### 迭代法
 
-​	4.	**返回当前节点的状态**（作为父节点的子树）。
+[统一写法](https://www.programmercarl.com/%E4%BA%8C%E5%8F%89%E6%A0%91%E7%9A%84%E7%BB%9F%E4%B8%80%E8%BF%AD%E4%BB%A3%E6%B3%95.html#%E6%80%9D%E8%B7%AF)
 
-```python
-
-def recursive_function(node):
-    """
-    通用递归模板
-    :param node: 当前处理的节点
-    :return: 当前节点的结果（根据问题定义）
-    """
-    # 1. 基本情况（递归终止条件）
-    if node is None:
-        return 0  # 或者其他适合问题的返回值
-
-    # 2. 递归计算子问题
-    left_result = recursive_function(node.left)  # 递归计算左子树
-    right_result = recursive_function(node.right)  # 递归计算右子树
-
-    # 3. 合并子问题的结果
-    #- 求最大值：return max(left_result, right_result) + 1
-    #- 求最小值：return min(left_result, right_result) + 1
-    #- 求累加和：return left_result + right_result + 当前节点值
-    result = combine_results(left_result, right_result)
-
-    # 4. 返回结果
-    return result
-
+```
+# 用栈实现，所以 倒序。
+前序： 中左右    迭代是右左中
+中序：左中右     迭代是右左中   
+后续：左右中     迭代是中右左
 ```
 
 ### 广度优先搜索（BFS）
 
+#### [层序遍历](https://www.programmercarl.com/0102.%E4%BA%8C%E5%8F%89%E6%A0%91%E7%9A%84%E5%B1%82%E5%BA%8F%E9%81%8D%E5%8E%86.html#_102-%E4%BA%8C%E5%8F%89%E6%A0%91%E7%9A%84%E5%B1%82%E5%BA%8F%E9%81%8D%E5%8E%86)
+
 ```python
-from collections import deque
+# 利用长度法
+# class TreeNode:
+#     def __init__(self, val=0, left=None, right=None):
+#         self.val = val
+#         self.left = left
+#         self.right = right
+class Solution:
+    def levelOrder(self, root: Optional[TreeNode]) -> List[List[int]]:
+        if not root:
+            return []
+        queue = collections.deque([root]) # deque双端队列  装入根节点
+        result = []
+        while queue: # 1. 遍历每一层
+            # 2. 遍历当前层的节点   长度划分出当前层的元素个数，for pop遍历并清空当前层元素
+            level = [] 
+            nums=len(queue) # queue动态变化，必须先统计长度
+            for _ in range(nums): 
+                cur = queue.popleft() 
+                level.append(cur.val)
+                # 3. 装入左右子树
+                if cur.left: 
+                    queue.append(cur.left)
+                if cur.right:
+                    queue.append(cur.right)
+            result.append(level) # 4. 保存当前层结果
+        return result
+```
 
-from collections import deque
-
-def bfs_template(root):
-    """
-    BFS 模板，用于按层遍历二叉树
-    :param root: 二叉树的根节点
-    :return: 按问题定义返回结果
-    """
-    if not root:
-        return 0  # 空树的特殊情况处理
-          result = 0  # 初始化结果（具体根据问题定义）
-
-    while queue:
-        # 处理当前层的所有节点
-        level_size = len(queue)  # 当前层的节点数
-        for _ in range(level_size):
-            node = queue.popleft()  # 取出当前节点
-
-            # 在这里处理当前节点（根据问题需求处理）
-            # 例如累加节点值、统计节点数等
-            # result += node.val（假如需要累加节点值）
-
-            # 将子节点加入队列
-            if node.left:
-                queue.append(node.left)
-            if node.right:
-                queue.append(node.right)
-
-        # 在这里处理层级相关操作（如层数加1）
-        # result += 1（假如问题是求深度）
-        result += 1
-
-    return result
-
-   
-	1.	队列初始化
-将根节点作为队列的初始元素。
-	2.	层级控制
-使用 level_size 控制每次遍历的层级节点数量，确保所有节点按层遍历。
+```python
+#递归法
+# class TreeNode:
+#     def __init__(self, val=0, left=None, right=None):
+#         self.val = val
+#         self.left = left
+#         self.right = right
+class Solution:
+    def levelOrder(self, root: Optional[TreeNode]) -> List[List[int]]:
+        if not root: #边界
+            return []
+        levels = []
+        def traverse(node, level): # 1. 确定参数和返回值   level指第几层 0~n-1
+            if not node: # 2. 终止条件
+                return
+             # 3. 单层递归逻辑
+            if len(levels) == level: #level从0开始   len从1开始。 如果不同，需要初始化新的一层
+                levels.append([])
+            levels[level].append(node.val)
+            traverse(node.left, level + 1)
+            traverse(node.right, level + 1)
+        traverse(root, 0)
+        return levels
 ```
 
 
@@ -307,4 +285,28 @@ def binary_search_insert_position(nums, target):
     return -1
 ```
 
-## 
+## 7. 单调栈
+
+```python
+def stack(nums):
+    n = len(nums)
+    result = [0] * n  # 根据题目初始化结果
+    stack = []  # 栈中存储索引
+    
+    for i in range(n):  # 遍历数组
+        # 根据条件调整栈顶元素
+        while stack and <当前元素与栈顶索引元素满足条件>:
+            idx = stack.pop()  # 弹出栈顶
+            result[idx] = <根据题目更新结果>
+        stack.append(i)  # 当前元素入栈
+    
+    return result
+```
+
+## 8. 动态规划五步骤
+
+1. DP下标的定义
+2. 递归公式
+3. 初始化
+4. 顺序
+5. 举例
