--- a/解题模板.md
+++ b/解题模板.md
@@ -116,9 +116,9 @@ class Solution:
 
 ```
 # 用栈实现，所以 倒序。
-前序： 中左右    迭代是右左中
+前序：中左右    迭代是右左中
 中序：左中右     迭代是右左中   
-后续：左右中     迭代是中右左
+后序：左右中     迭代是中右左     
 ```
 
 ### 广度优先搜索（BFS）
@@ -303,10 +303,45 @@ def stack(nums):
     return result
 ```
 
-## 8. 动态规划五步骤
+## 8. 动态规划
 
 1. DP下标的定义
 2. 递归公式
 3. 初始化
 4. 顺序
 5. 举例
+
+## 9. 回溯
+
+三步骤
+
+1. 回溯函数模板 参数及返回值
+
+    参数：path存放结果，result存放结果集，startIndex下一层for循环搜索的起始位置
+
+2. 回溯函数终止条件
+
+3. 回溯搜索的遍历过程
+
+```python
+# for横向遍历   backtrack纵向遍历
+def backtracking(xxx,xxx,startIndex,path,result): 
+  	"""
+  	startIndex
+  	path
+  	result
+  	"""
+    if 终止条件:
+        存放结果
+        return
+    for i in range(startIndex,len(xxx)):
+        处理节点
+        backtrack(xxx,xxx,total,i,path,result) # i
+        回溯，撤销处理结果
+# 定义全局变量
+result=[]
+path=[]
+startIndex=0 # 控制递归过程中遍历的起点，从而避免产生重复的组合
+backtracking(xxx,xxx,startIndex,path,result)
+```
+
