--- a/解题模板.md
+++ b/解题模板.md
@@ -1,8 +1,4 @@
-[TOC]
-
 # 解题模板
-
-
 
 ## 1. 矩阵
 
@@ -285,6 +281,8 @@ def binary_search_insert_position(nums, target):
     return -1
 ```
 
+
+
 ## 7. 单调栈
 
 ```python
@@ -305,11 +303,17 @@ def stack(nums):
 
 ## 8. 动态规划
 
-1. DP下标的定义
-2. 递归公式
+五步骤：DP下标定义  公式  初始化  顺序  举例
+
+1. dp下标定义
+2. 递推公式
 3. 初始化
-4. 顺序
-5. 举例
+4. 遍历顺序
+5. 举例推导dp数组
+
+- 求最值      外层for背包  内层for物品
+- 求排列数（强调顺序）   外层for背包，内层for物品。
+- 求组合数（凑零钱）   外层for物品，内层for背包。
 
 ## 9. 回溯
 
@@ -321,27 +325,22 @@ def stack(nums):
 
 2. 回溯函数终止条件
 
-3. 回溯搜索的遍历过程
+3. 遍历过程 （思考N叉树，横向遍历什么   纵向遍历什么）
 
 ```python
-# for横向遍历   backtrack纵向遍历
-def backtracking(xxx,xxx,startIndex,path,result): 
-  	"""
-  	startIndex
-  	path
-  	result
-  	"""
+def backtracking(result,path,xxx): 
     if 终止条件:
-        存放结果
-        return
-    for i in range(startIndex,len(xxx)):
-        处理节点
-        backtrack(xxx,xxx,total,i,path,result) # i
-        回溯，撤销处理结果
+        result.append(path[:])  # 存放结果 必须[:]返回新列表
+        return   #返回
+    for i in range(len(xxx)): # 数组左闭右开[ ), 结尾剪枝
+        处理当前值
+        backtrack(path,result,xxx)  # 如果有startIndex， i表示可重复  i+1不能重复取
+        撤销当前值
 # 定义全局变量
-result=[]
-path=[]
-startIndex=0 # 控制递归过程中遍历的起点，从而避免产生重复的组合
-backtracking(xxx,xxx,startIndex,path,result)
+result,path=[],[]
+backtracking(result,path,xxx)
+return result 
+
+  
 ```
 
