--- a/解题模板.md
+++ b/解题模板.md
@@ -2,22 +2,23 @@
 
 ## 1. 矩阵
 
-### 花式遍历 
+### 顺时针遍历
 
 ```python
+# 定义四个边界 
 def spiralOrder(matrix):
     if not matrix:
         return []
 
-    # 初始化边界
+    # 初始化边界   双闭区间
     top, bottom = 0, len(matrix) - 1
     left, right = 0, len(matrix[0]) - 1
     
     result = []
     
     while top <= bottom and left <= right:
-        # 从左到右遍历行，行不变
-        for i in range(left, right + 1):
+        # 从左到右遍历该行
+        for i in range(left, right + 1): 
             result.append(matrix[top][i])
         top += 1  # 遍历完移到下一行
         
@@ -268,16 +269,16 @@ class Solution:
 时间复杂度O(logn)
 
 ```python
-def binary_search_insert_position(nums, target):
-    left, right = 0, len(nums) - 1
+def binary_search(nums, target):
+    left, right = 0, len(nums) - 1 # 循环不变量 双闭区间
     while left <= right:
         mid = (left + right) // 2
         if nums[mid] == target:
             return mid
         elif nums[mid] < target:
-            left = mid + 1
+            left = mid + 1  
         else:
-            right = mid - 1
+            right = mid - 1 
     return -1
 ```
 
