--- a/解题模板.md
+++ b/解题模板.md
@@ -1,8 +1,159 @@
 # 解题模板
 
-## 1. 矩阵
+## 数组
 
-### 顺时针遍历
+### 1. 前缀和
+
+```python
+class Solution:
+    def subarraySum(self, nums: List[int], k: int) -> int:
+        # 非单调，要前缀和  
+        
+        count=0 #记录总数
+        cur_sum=0 # 当前前缀和为0
+        prefix_count={0:1} # 哈希表，前缀和为0 出现1次
+
+        for num in nums:
+            # 更新当前前缀和
+            cur_sum+=num
+            # 如果满足条件的前缀和 记录总数
+            count+=prefix_count.get(cur_sum-k,0)
+            # 更新哈希表
+            prefix_count[cur_sum]=prefix_count.get(cur_sum,0)+1
+        return count
+```
+
+### 2. 滑动窗口
+
+四步
+
+（1）队头移出过期索引 
+
+（2）队尾移出小于当前值的索引 
+
+（3）队尾添加当前索引 
+
+（4）满足条件时统计信息
+
+#### 静态窗口
+
+```python
+# 遍历字符
+for right in range(len(strs)):
+    # 持续右进
+    # 当前窗口不满足条件时左出
+    # 当前窗口满足需求时统计信息
+```
+
+#### 动态窗口
+
+```python
+left=0
+# 无重复字符的最长子串 用set() 
+# 异位词 用Counter字典
+windows=set()  
+#  外层循环移动右指针，内层循环移动左指针
+for right in range(len(strs)):
+    # 判断当前元素strs[right]
+    # 当前区间[left,right]不满足条件时，移动左指针直到满足条件
+    while left<=right and check(xxx):
+        # 左侧窗口移出元素，左指针右移
+        windows.remove(strs[left])
+        left+=1
+    
+    # 当前区间[left,right]满足条件时，加入窗口并统计信息
+    windows.add(strs[right]) 
+```
+
+### 3. 查找算法
+
+#### 二分查找
+
+时间复杂度O(logn)
+
+```python
+def binary_search(nums, target):
+    left, right = 0, len(nums) - 1 # 循环不变量 双闭区间
+    while left <= right:
+        mid = (left + right) // 2
+        if nums[mid] == target:
+            return mid
+        elif nums[mid] < target:
+            left = mid + 1  
+        else:
+            right = mid - 1 
+    return -1
+```
+
+### 4. 排序算法
+
+#### 快速排序QuickSort
+
+时间复杂度O(nlogn)
+
+```python
+def quicksort(arr, low, high):
+    """
+    :param arr: 待排序的数组
+    :param low: 排序的起始索引
+    :param high: 排序的结束索引
+    """
+    if low < high:
+        # 获取基准元素的索引
+        pivot_index = partition(arr, low, high)
+
+        # 递归排序基准左侧和右侧部分
+        quicksort(arr, low, pivot_index - 1)  # 排序左侧
+        quicksort(arr, pivot_index + 1, high)  # 排序右侧
+
+def partition(arr, low, high):
+    """
+    分区函数，选择一个基准元素并将数组分为两部分
+
+    :param arr: 待排序的数组
+    :param low: 排序的起始索引
+    :param high: 排序的结束索引
+    :return: 基准元素的最终位置
+    
+    总结
+    选择基准: 选择数组的最后一个元素作为基准。
+    分区过程: 遍历数组，将小于基准的元素移动到左侧。
+    放置基准: 将基准元素放到它的正确位置。
+    返回值: 返回基准元素的新索引，以便快速排序的递归调用使用。
+    """
+    pivot = arr[high]  # 选择最后一个元素作为基准
+    i = low - 1  # 小于基准的元素的最后一个索引
+
+    # 遍历数组并进行分区
+    for j in range(low, high):
+        if arr[j] < pivot:
+            i = i + 1  # 增加小于基准的元素的索引
+            arr[i], arr[j] = arr[j], arr[i]  # 交换元素
+
+    # 将基准元素放到正确的位置
+    arr[i + 1], arr[high] = arr[high], arr[i + 1]
+    return i + 1  # 返回基准元素的位置
+```
+
+### 5. 单调栈
+
+```python
+def stack(nums):
+    n = len(nums)
+    result = [0] * n  # 根据题目初始化结果
+    stack = []  # 栈中存储索引
+    
+    for i in range(n):  # 遍历数组
+        # 根据条件调整栈顶元素
+        while stack and <当前元素与栈顶索引元素满足条件>:
+            idx = stack.pop()  # 弹出栈顶
+            result[idx] = <根据题目更新结果>
+        stack.append(i)  # 当前元素入栈
+    
+    return result
+```
+
+### 6. 矩阵顺时针遍历
 
 ```python
 # 定义四个边界 
@@ -42,64 +193,91 @@ def spiralOrder(matrix):
     return result
 ```
 
-## 2. 滑动窗口
+### 
 
-### 静态窗口
+## 链表
 
+### 1. 插入元素
+
+#### 头插
+
+
+
+#### 尾插
+
+1. 保存下一个节点
+2. 尾插      旧指None    新指旧
+3. 新表更新尾节点
+4. 旧表更新头结点
+
+### 2. 翻转链表
+思路：保存->翻转->前后移
 ```python
-# 遍历字符
-for right in range(len(strs)):
-    # 持续右进
-    # 当前窗口不满足条件时左出
-    # 当前窗口满足需求时统计信息
+def reverse_linked_list(head):
+    """
+    :param head: 链表的头节点
+    :return: 翻转后的链表头节点
+    """
+    prev = None  # 上一个节点，初始化为 None
+    current = head  # 当前节点，初始化为链表的头节点
+
+    # 遍历链表，直到当前节点为空   
+    while current:
+        next_node = current.next  # 保存下一个节点
+        current.next = prev  # 将当前节点的next指针指向上一个节点（翻转指针）
+        prev = current  # 移动 prev 到当前节点
+        current = next_node  # 移动到下一个节点
+
+    return prev  # 返回新的头节点（翻转后的链表头）
 ```
 
-### 动态窗口
+### 3. 合并两个有序链表
+
+时间复杂度为 O(m + n)
 
 ```python
-left=0
-# 无重复字符的最长子串 用set() 
-# 异位词 用Counter字典
-windows=set()  
-#  外层循环移动右指针，内层循环移动左指针
-for right in range(len(strs)):
-    # 判断当前元素strs[right]
-    # 当前区间[left,right]不满足条件时，移动左指针直到满足条件
-    while left<=right and check(xxx):
-        # 左侧窗口移出元素，左指针右移
-        windows.remove(strs[left])
-        left+=1
-    
-    # 当前区间[left,right]满足条件时，加入窗口并统计信息
-    windows.add(strs[right]) 
-```
+def merge_two_lists(l1, l2):
+    # 创建一个虚拟头节点，方便处理合并操作
+    dummy = ListNode(0)
+    current = dummy  # 用于遍历和构建合并链表的指针
 
-## 3. 数组
-
-### 前缀和
-
-```python
-class Solution:
-    def subarraySum(self, nums: List[int], k: int) -> int:
-        # 非单调，不能滑动窗口  要前缀和  
+    # 遍历两个链表，直到其中一个链表为空
+    while l1 and l2:
+        # 比较两个链表的当前节点的值
+        if l1.val < l2.val:
+            # 如果 l1 的值更小，将 l1 的节点添加到合并链表中
+            current.next = l1
+            l1 = l1.next  # 移动 l1 指针到下一个节点
+        else:
+            # 如果 l2 的值更小或相等，将 l2 的节点添加到合并链表中
+            current.next = l2
+            l2 = l2.next  # 移动 l2 指针到下一个节点
         
-        count=0 #记录总数
-        cur_sum=0 # 当前前缀和为0
-        prefix_count={0:1} # 哈希表，前缀和为0 出现1次
+        # 移动 current 指针到合并链表的下一个位置
+        current = current.next
 
-        for num in nums:
-            # 更新当前前缀和
-            cur_sum+=num
-            # 如果满足条件的前缀和 记录总数
-            count+=prefix_count.get(cur_sum-k,0)
-            # 更新哈希表
-            prefix_count[cur_sum]=prefix_count.get(cur_sum,0)+1
-        return count
+    # 处理剩余的节点
+    # 只需将 l1 或 l2 中剩余的节点连到合并链表的末尾
+    if l1:
+        current.next = l1
+    if l2:
+        current.next = l2
+
+    # 返回合并后的链表，去掉虚拟头节点
+    return dummy.next
 ```
 
-## 4. 二叉树
 
-### 深度优先遍历DFS
+
+
+
+
+
+
+
+## 二叉树
+
+### 1. 深度优先遍历DFS
 
 #### 递归三步骤
 
@@ -118,7 +296,7 @@ class Solution:
 后序：左右中     迭代是中右左     
 ```
 
-### 广度优先搜索（BFS）
+### 2. 广度优先搜索（BFS）
 
 #### [层序遍历](https://www.programmercarl.com/0102.%E4%BA%8C%E5%8F%89%E6%A0%91%E7%9A%84%E5%B1%82%E5%BA%8F%E9%81%8D%E5%8E%86.html#_102-%E4%BA%8C%E5%8F%89%E6%A0%91%E7%9A%84%E5%B1%82%E5%BA%8F%E9%81%8D%E5%8E%86)
 
@@ -178,9 +356,11 @@ class Solution:
 
 
 
-## 5. 图论
+## 图论
 
-### 岛屿数量- 深度优先遍历
+### 1. 深度优先遍历
+
+岛屿数量
 
 ```python
 class Solution:
@@ -215,7 +395,9 @@ class Solution:
         self.dfs(grid,i,j+1)
 ```
 
-### 腐烂橘子- 广度优先遍历
+### 2. 广度优先遍历
+
+腐烂橘子
 
 ```python
 class Solution:
@@ -262,67 +444,13 @@ class Solution:
         return time - 1 if fresh_nums == 0 else -1
 ```
 
-## 6.  查找算法
-
-### 二分查找
-
-时间复杂度O(logn)
-
-```python
-def binary_search(nums, target):
-    left, right = 0, len(nums) - 1 # 循环不变量 双闭区间
-    while left <= right:
-        mid = (left + right) // 2
-        if nums[mid] == target:
-            return mid
-        elif nums[mid] < target:
-            left = mid + 1  
-        else:
-            right = mid - 1 
-    return -1
-```
-
-
-
-## 7. 单调栈
-
-```python
-def stack(nums):
-    n = len(nums)
-    result = [0] * n  # 根据题目初始化结果
-    stack = []  # 栈中存储索引
-    
-    for i in range(n):  # 遍历数组
-        # 根据条件调整栈顶元素
-        while stack and <当前元素与栈顶索引元素满足条件>:
-            idx = stack.pop()  # 弹出栈顶
-            result[idx] = <根据题目更新结果>
-        stack.append(i)  # 当前元素入栈
-    
-    return result
-```
-
-## 8. 动态规划
-
-五步骤：DP下标定义  公式  初始化  顺序  举例
-
-1. dp下标定义
-2. 递推公式
-3. 初始化
-4. 遍历顺序
-5. 举例推导dp数组
-
-- 求最值      外层for背包  内层for物品
-- 求排列数（强调顺序）   外层for背包，内层for物品。
-- 求组合数（凑零钱）   外层for物品，内层for背包。
-
-## 9. 回溯
+## 回溯
 
 三步骤
 
 1. 回溯函数模板 参数及返回值
 
-    参数：path存放结果，result存放结果集，startIndex下一层for循环搜索的起始位置
+   参数：path存放结果，result存放结果集，startIndex下一层for循环搜索的起始位置
 
 2. 回溯函数终止条件
 
@@ -341,7 +469,19 @@ def backtracking(result,path,xxx):
 result,path=[],[]
 backtracking(result,path,xxx)
 return result 
-
-  
 ```
+
+## 动态规划
+
+五步骤：DP下标定义  公式  初始化  顺序  举例
+
+1. dp下标定义
+2. 递推公式
+3. 初始化
+4. 遍历顺序
+5. 举例推导dp数组
+
+- 求最值      外层for背包  内层for物品
+- 求排列数（强调顺序）   外层for背包，内层for物品。
+- 求组合数（凑零钱）   外层for物品，内层for背包。
 
