新增堆排序

--- a/解题模板.md
+++ b/解题模板.md
@@ -1,8 +1,47 @@
 # 解题模板
 
+
+
+## 字符串
+
+### 1. 字符串解码
+
+&quot;3[a]2[bc]&quot;解码为&quot;aaabcbc"
+
+```python
+class Solution:
+    def decodeString(self, s: str) -> str:
+        stack=[] 
+        cur_str="" # 存储当前字符串
+        cur_num=0 # 存储当前重复数字
+
+        for char in s:
+            # 数字  可能出现连续数字
+            if char.isdigit():
+                cur_num=cur_num*10+int(char)
+            # [
+            elif char=="[":
+                # 入栈  保存之前的字符串 + 将要重复的数字
+                stack.append([cur_str,cur_num])
+                # 恢复
+                cur_str=""
+                cur_num=0
+            # ]
+            elif char =="]":
+                # 出栈
+                pre_str,nums=stack.pop()
+                cur_str=pre_str+ cur_str*nums # 当前字符串是要重复的目标
+            # 字母
+            else:
+                cur_str+=char
+        return cur_str
+```
+
+
+
 ## 数组
 
-### 1. 前缀和
+### 1. 前缀和  区间和
 
 ```python
 class Solution:
@@ -49,8 +88,6 @@ for right in range(len(strs)):
 
 ```python
 left=0
-# 无重复字符的最长子串 用set() 
-# 异位词 用Counter字典
 windows=set()  
 #  外层循环移动右指针，内层循环移动左指针
 for right in range(len(strs)):
@@ -134,6 +171,53 @@ def partition(arr, low, high):
     arr[i + 1], arr[high] = arr[high], arr[i + 1]
     return i + 1  # 返回基准元素的位置
 ```
+
+#### 堆排序
+
+```python
+def findKthLargest(nums, k):
+    """
+    找到数组中第K个最大的元素。
+    
+    :param nums: 一个整数数组
+    :param k: 要找的第K个最大元素的位置
+    :return: 第K个最大的元素
+    """
+    # 构建最大堆
+    def build_max_heap(nums):
+        length = len(nums)
+        # 从最后一个非叶子节点开始，向上构建最大堆
+        for i in range(length//2 - 1, -1, -1):
+            max_heapify(nums, length, i)
+    
+    # 调整堆，使其满足最大堆的性质  如果子节点大于父节点，就交换它们，并递归调整子树。
+    def max_heapify(nums, length, i):
+        largest = i
+        left = 2 * i + 1
+        right = 2 * i + 2
+        if left < length and nums[largest] < nums[left]:
+            largest = left
+        if right < length and nums[largest] < nums[right]:
+            largest = right
+        if largest != i:
+            nums[i], nums[largest] = nums[largest], nums[i]
+            max_heapify(nums, length, largest)
+    
+    build_max_heap(nums) # 构建最大堆
+    for i in range(k - 1):
+        nums[0], nums[-1] = nums[-1], nums[0]  # 交换堆顶和最后一个元素
+        length = len(nums) - 1  # 减少堆的大小
+        max_heapify(nums, length, 0)  # 重新调整堆
+    return nums[0]  # 返回堆顶元素，即第K个最大的元素
+
+# 示例
+nums = [3,2,1,5,6,4]
+k = 2
+print(findKthLargest(nums, k))  # 输出应该是5，因为5是第二大的元素
+
+```
+
+
 
 ### 5. 单调栈
 
@@ -287,10 +371,10 @@ def merge_two_lists(l1, l2):
 
 #### 迭代法
 
-[统一写法](https://www.programmercarl.com/%E4%BA%8C%E5%8F%89%E6%A0%91%E7%9A%84%E7%BB%9F%E4%B8%80%E8%BF%AD%E4%BB%A3%E6%B3%95.html#%E6%80%9D%E8%B7%AF)
+[统一写法](https://www.programmercarl.com/%E4%BA%8C%E5%8F%89%E6%A0%91%E7%9A%84%E7%BB%9F%E4%B8%80%E8%BF%AD%E4%BB%A3%E6%B3%95.html#%E6%80%9D%E8%B7%AF)      
 
 ```
-# 用栈实现，所以 倒序。
+# 用栈实现，所以 倒序。    每次中节点加none
 前序：中左右    迭代是右左中
 中序：左中右     迭代是右左中   
 后序：左右中     迭代是中右左     
@@ -475,7 +559,7 @@ return result
 
 五步骤：DP下标定义  公式  初始化  顺序  举例
 
-1. dp下标定义
+1. dp下标定义    dp[i]要特异性，不能是含糊范围
 2. 递推公式
 3. 初始化
 4. 遍历顺序
