解题方法论

--- a/解题方法论.md
+++ b/解题方法论.md
@@ -1,4 +1,4 @@
-# 解题模板
+# 解题方法论
 
 
 
@@ -559,7 +559,7 @@ return result
 
 五步骤：DP下标定义  公式  初始化  顺序  举例
 
-1. dp下标定义    dp[i]要特异性，不能是含糊范围
+1. dp下标定义⭐️⭐️⭐️      dp[i]要特异性，不能是含糊范围
 2. 递推公式
 3. 初始化
 4. 遍历顺序
