动态规划梳理

--- a/解题方法论.md
+++ b/解题方法论.md
@@ -557,15 +557,128 @@ return result
 
 ## 动态规划
 
-五步骤：DP下标定义  公式  初始化  顺序  举例
+### 1. 动态规划5步骤
 
-1. dp下标定义⭐️⭐️⭐️      dp[i]要特异性，不能是含糊范围
-2. 递推公式
-3. 初始化
-4. 遍历顺序
-5. 举例推导dp数组
+- dp下标定义⭐️⭐️⭐️
+- 递推公式
+- 初始化
+- 遍历顺序
+- 举例推导dp数组
 
-- 求最值      外层for背包  内层for物品
-- 求排列数（强调顺序）   外层for背包，内层for物品。
-- 求组合数（凑零钱）   外层for物品，内层for背包。
+### 2. 背包递推公式
 
+- 能否装满背包（或最多装多少）
+
+  ```python
+  if nums[i-1] <= j: # 物品i能装入
+  	  dp[i][j] = max(dp[i-1][j], dp[i][j-nums[i-1]] + nums[i-1])  
+  else: # 无法装入
+  	  dp[i][j] = dp[i-1][j]
+  ```
+
+- 装满背包有几种方法
+
+  ```python
+  if nums[i-1] <= j: # 物品i能装入
+    	# dp[i-1][j]：不装入物品i时装满容量为j的方案数
+      # dp[i][j - nums[i-1]]：装入物品i时装满容量为j的方案数
+  	  dp[i][j] = dp[i-1][j] + dp[i][j - nums[i-1]]
+  else: # 无法装入,方案数不增加
+  	  dp[i][j] = dp[i-1][j]
+  ```
+
+- 背包装满最大价值
+
+  ```python
+  for i in range(1, n + 1):  # 先物品
+      for j in range(capacity + 1):  # 后容量
+          if weights[i - 1]<= j:  # 物品i能装入   物品序号i从1开始，所以i-1才是物品i的价值
+            	dp[i][j] = max(dp[i-1][j], dp[i-1][j-weights[i-1]] + values[i-1])
+          else: 
+              dp[i][j] = dp[i-1][j]
+  ```
+
+- 背包装满最小物品数
+
+  ```python
+  for i in range(1, n + 1):  # 先物品
+      for j in range(1, target + 1):  # 后容量
+          if coins[i - 1] <=j :  # 物品i能装入
+              dp[i][j] = min(dp[i-1][j], dp[i][j - coins[i - 1]] + 1)
+          else: 
+              dp[i][j] = dp[i-1][j]
+  ```
+
+  
+
+### 3. 01背包
+
+- 定义：  dp[i] [j]从下标0~i的物品中任取，放入容量为j的背包的最大价值
+
+- 递归公式:   放物品i和不放物品i两种情况
+
+  - 求最大价值
+
+    ```python
+    dp[i][j] = max(dp[i-1][j], dp[i-1][j-weight[i]]+value[i])
+    ```
+
+  - 求是否刚好装满   
+
+    ```python
+    # 初始化全False   任一为True则为True
+    dp[i][j] = dp[i-1][j] or dp[i-1][j-nums[i-1]
+    ```
+
+  - 顺序：  先物品i后背包j，即从左到右填充 方便理解
+
+    二维dp
+
+    ```python
+    for i in range(1, n): # 先物品
+        for j in range(bagweight + 1): # 后背包
+            if j < weight[i]:
+                dp[i][j] = dp[i-1][j]
+            else:
+                dp[i][j] = max(dp[i-1][j], dp[i-1][j-weight[i]]+value[i])
+    ```
+
+    一维dp
+
+    ```python
+    for i in range(n):  # 先物品
+        for j in range(bagweight, weight[i]-1, -1):  # 后背包
+          # 从后往前倒序，每次取得状态不会和之前取得状态重合，以保证物品i只被放入一次。
+          dp[j] = max(dp[j], dp[j - weight[i]] + value[i])
+    ```
+
+    
+
+### 4. 完全背包
+
+- 求组合（ 无顺序，如凑零钱）：先物品后背包
+- 求排列（有顺序）：先背包后物品  （背包容量的每一个值，都是经过 物品a 和 b 的计算，包含了{a, b} 和 {b, a}两种情况）
+
+```python
+# 求组合：先物品后背包
+def change(self, amount: int, coins: List[int]) -> int:
+    # 初始化二维数组 dp，其中 dp[i][j] 表示用前 i 种物品构成金额 j 的方法数
+    dp = [[0] * (amount + 1) for _ in range(len(coins) + 1)]
+    # 初始化：金额为 0 的组合数为 1（无论有多少种硬币）
+    for i in range(len(coins) + 1):
+        dp[i][0] = 1
+
+    # 先物品
+    for i in range(1, len(coins) + 1):
+        # 遍历金额
+        for j in range(amount + 1):
+            if j >= coins[i - 1]:
+                # 当前硬币 coins[i-1] 可用：包含当前硬币和不包含当前硬币的组合数
+                dp[i][j] = dp[i - 1][j] + dp[i][j - coins[i - 1]]
+            else:
+                # 当前硬币 coins[i-1] 不可用
+                dp[i][j] = dp[i - 1][j]
+
+    # 返回使用所有硬币构成金额 amount 的组合数
+    return dp[len(coins)][amount]
+```
