梳理 滑动窗口

--- a/解题方法论.md
+++ b/解题方法论.md
@@ -41,65 +41,35 @@ class Solution:
 
 ## 数组
 
-### 1. 前缀和  区间和
-
-```python
-class Solution:
-    def subarraySum(self, nums: List[int], k: int) -> int:
-        # 非单调，要前缀和  
-        
-        count=0 #记录总数
-        cur_sum=0 # 当前前缀和为0
-        prefix_count={0:1} # 哈希表，前缀和为0 出现1次
-
-        for num in nums:
-            # 更新当前前缀和
-            cur_sum+=num
-            # 如果满足条件的前缀和 记录总数
-            count+=prefix_count.get(cur_sum-k,0)
-            # 更新哈希表
-            prefix_count[cur_sum]=prefix_count.get(cur_sum,0)+1
-        return count
-```
+### 1. 前缀和    区间和
 
 ### 2. 滑动窗口
 
-四步
+#### 滑动窗口三步骤
 
-（1）队头移出过期索引 
+- 什么时候应该扩大窗口？
+- 什么时候应该缩小窗口？
+- 什么时候应该更新答案？
 
-（2）队尾移出小于当前值的索引 
-
-（3）队尾添加当前索引 
-
-（4）满足条件时统计信息
-
-#### 静态窗口
+#### [代码模板](https://labuladong.online/algo/essential-technique/sliding-window-framework/#%E5%9B%9B%E3%80%81%E6%9C%80%E9%95%BF%E6%97%A0%E9%87%8D%E5%A4%8D%E5%AD%90%E4%B8%B2)
 
 ```python
-# 遍历字符
-for right in range(len(strs)):
-    # 持续右进
-    # 当前窗口不满足条件时左出
-    # 当前窗口满足需求时统计信息
-```
-
-#### 动态窗口
-
-```python
-left=0
-windows=set()  
-#  外层循环移动右指针，内层循环移动左指针
-for right in range(len(strs)):
-    # 判断当前元素strs[right]
-    # 当前区间[left,right]不满足条件时，移动左指针直到满足条件
-    while left<=right and check(xxx):
-        # 左侧窗口移出元素，左指针右移
-        windows.remove(strs[left])
-        left+=1
+left，right = 0, 0 # 左闭右开
+windows=xxx # 无重复字符用set()   统计字符频率用Counter字典
+while right<len(s):
+  	# 1. 加入窗口，同时右移右指针
+    windows.add(s[right]) 
+    right+=1
+    # 2. 进行窗口内数据的一系列更新
+    xxx
     
-    # 当前区间[left,right]满足条件时，加入窗口并统计信息
-    windows.add(strs[right]) 
+    # 3. 判断左侧窗口是否要收缩
+    while left<right and check(xxx):
+        # 4. 左侧窗口移出元素，同时左指针右移
+        windows.remove(s[left])
+        left+=1
+        # 进行窗口内数据的一系列更新
+        xxx
 ```
 
 ### 3. 查找算法
@@ -126,50 +96,41 @@ def binary_search(nums, target):
 
 #### 快速排序QuickSort
 
-时间复杂度O(nlogn)
+先将一个元素排好序，然后再将剩下的元素排好序。时间复杂度O(nlogn) ，类似二叉树的前序遍历
 
 ```python
-def quicksort(arr, low, high):
+def quicksort(nums, left, right):
     """
-    :param arr: 待排序的数组
-    :param low: 排序的起始索引
-    :param high: 排序的结束索引
+    :param nums: 待排序的数组
+    :param left: 排序的起始索引
+    :param right: 排序的结束索引
     """
-    if low < high:
-        # 获取基准元素的索引
-        pivot_index = partition(arr, low, high)
+    # 终止条件
+    if left >= right:
+      	return 
+    i = partition(nums, left, right) # 基准元素的索引 
+    quicksort(nums, left, i - 1)  # 左区间排序
+    quicksort(nums, i + 1, right)  # 右区间排序
 
-        # 递归排序基准左侧和右侧部分
-        quicksort(arr, low, pivot_index - 1)  # 排序左侧
-        quicksort(arr, pivot_index + 1, high)  # 排序右侧
-
-def partition(arr, low, high):
+def partition(nums, left, right):
     """
-    分区函数，选择一个基准元素并将数组分为两部分
+    分区函数，选择一个基准元素,将数组分为两部分
 
-    :param arr: 待排序的数组
-    :param low: 排序的起始索引
-    :param high: 排序的结束索引
+    :param nums: 待排序的数组
+    :param left: 排序的起始索引
+    :param right: 排序的结束索引
     :return: 基准元素的最终位置
-    
-    总结
-    选择基准: 选择数组的最后一个元素作为基准。
-    分区过程: 遍历数组，将小于基准的元素移动到左侧。
-    放置基准: 将基准元素放到它的正确位置。
-    返回值: 返回基准元素的新索引，以便快速排序的递归调用使用。
     """
-    pivot = arr[high]  # 选择最后一个元素作为基准
-    i = low - 1  # 小于基准的元素的最后一个索引
-
-    # 遍历数组并进行分区
-    for j in range(low, high):
-        if arr[j] < pivot:
-            i = i + 1  # 增加小于基准的元素的索引
-            arr[i], arr[j] = arr[j], arr[i]  # 交换元素
-
-    # 将基准元素放到正确的位置
-    arr[i + 1], arr[high] = arr[high], arr[i + 1]
-    return i + 1  # 返回基准元素的位置
+   # 以 nums[left] 作为基准数
+   i,j=left,right
+   while i<j:
+      while i < j and nums[j] >= nums[left]: # 右指针找到第一个小于基准的元素
+         j -= 1
+      while i < j and nums[i] <= nums[left]: # 左指针找到第一个大于基准的元素
+         i += 1
+      nums[i], nums[j] = nums[j], nums[i] # 交换两者
+    nums[left], nums[i] = nums[i], nums[left] # 基准元素放到对应位置，返回最终位置
+    return i
 ```
 
 #### 堆排序
@@ -216,8 +177,6 @@ k = 2
 print(findKthLargest(nums, k))  # 输出应该是5，因为5是第二大的元素
 
 ```
-
-
 
 ### 5. 单调栈
 
@@ -277,15 +236,9 @@ def spiralOrder(matrix):
     return result
 ```
 
-### 
-
 ## 链表
 
 ### 1. 插入元素
-
-#### 头插
-
-
 
 #### 尾插
 
@@ -295,7 +248,13 @@ def spiralOrder(matrix):
 4. 旧表更新头结点
 
 ### 2. 翻转链表
-思路：保存->翻转->前后移
+思路：pre新链表    cur当前节点     next下一个节点
+
+1. 旧链表保存下一个节点
+2. 旧链表当前节点指向新链表头（翻转指针）
+3. 新链表更新表头
+4. 旧链表更新当前节点
+
 ```python
 def reverse_linked_list(head):
     """
@@ -307,12 +266,12 @@ def reverse_linked_list(head):
 
     # 遍历链表，直到当前节点为空   
     while current:
-        next_node = current.next  # 保存下一个节点
-        current.next = prev  # 将当前节点的next指针指向上一个节点（翻转指针）
-        prev = current  # 移动 prev 到当前节点
-        current = next_node  # 移动到下一个节点
+        next_node = current.next  # 1. 旧链表保存下一个节点
+        current.next = prev  # 2. 将当前节点指向新链表头（翻转指针）
+        prev = current  # 3.新链表更新表头
+        current = next_node  # 4. 旧链表更新当前节点
 
-    return prev  # 返回新的头节点（翻转后的链表头）
+    return prev  # 返回新的头节点
 ```
 
 ### 3. 合并两个有序链表
@@ -350,14 +309,6 @@ def merge_two_lists(l1, l2):
     # 返回合并后的链表，去掉虚拟头节点
     return dummy.next
 ```
-
-
-
-
-
-
-
-
 
 ## 二叉树
 
