--- a/解题方法论.md
+++ b/解题方法论.md
@@ -76,12 +76,12 @@ while right<len(s):
 
 #### 二分查找
 
-时间复杂度O(logn)
+时间复杂度O(logn)  
 
 ```python
 def binary_search(nums, target):
     left, right = 0, len(nums) - 1 # 循环不变量 双闭区间
-    while left <= right:
+    while left <= right: # 双闭区间左右边界也要判断 需要等号检查最后一个元素
         mid = (left + right) // 2
         if nums[mid] == target:
             return mid
@@ -99,19 +99,6 @@ def binary_search(nums, target):
 先将一个元素排好序，然后再将剩下的元素排好序。时间复杂度O(nlogn) ，类似二叉树的前序遍历
 
 ```python
-def quicksort(nums, left, right):
-    """
-    :param nums: 待排序的数组
-    :param left: 排序的起始索引
-    :param right: 排序的结束索引
-    """
-    # 终止条件
-    if left >= right:
-      	return 
-    i = partition(nums, left, right) # 基准元素的索引 
-    quicksort(nums, left, i - 1)  # 左区间排序
-    quicksort(nums, i + 1, right)  # 右区间排序
-
 def partition(nums, left, right):
     """
     分区函数，选择一个基准元素,将数组分为两部分
@@ -123,14 +110,28 @@ def partition(nums, left, right):
     """
    # 以 nums[left] 作为基准数
    i,j=left,right
+   base = nums[left]
    while i<j:
-      while i < j and nums[j] >= nums[left]: # 右指针找到第一个小于基准的元素
+      while i < j and nums[j] >= base: # 右指针找到第一个小于基准的元素
          j -= 1
-      while i < j and nums[i] <= nums[left]: # 左指针找到第一个大于基准的元素
+      while i < j and nums[i] <= base: # 左指针找到第一个大于基准的元素
          i += 1
-      nums[i], nums[j] = nums[j], nums[i] # 交换两者
-    nums[left], nums[i] = nums[i], nums[left] # 基准元素放到对应位置，返回最终位置
+      if i < j: # 每次变动序号，都要判断   交换两者
+      	 nums[i], nums[j] = nums[j], nums[i] 
+    nums[left], nums[i] = nums[i], nums[left] # 基准元素交换到对应位置，返回基准元素所在下标
     return i
+def quicksort(nums, left, right):
+    """
+    :param nums: 待排序的数组
+    :param left: 排序的起始索引
+    :param right: 排序的结束索引
+    """
+    # 终止条件   等号指一个数，无需交换排序
+    if left >= right:
+      	return 
+    i = partition(nums, left, right) # 基准元素的索引 
+    quicksort(nums, left, i - 1)  # 左区间排序
+    quicksort(nums, i + 1, right)  # 右区间排序
 ```
 
 #### 堆排序
@@ -221,13 +222,13 @@ def spiralOrder(matrix):
             result.append(matrix[i][right])
         right -= 1
         
-        # 从右到左遍历行  先判断行是否越界
+        # 从右到左遍历行  !!!先判断行是否越界,是否还有行!!!
         if top <= bottom: 
             for i in range(right, left - 1, -1):
                 result.append(matrix[bottom][i])
             bottom -= 1
         
-        # 从下到上遍历列   先判断列是否越界
+        # 从下到上遍历列   !!!先判断列是否越界，是否还有列!!!
         if left <= right:
             for i in range(bottom, top - 1, -1):
                 result.append(matrix[i][left])
