--- a/解题方法论.md
+++ b/解题方法论.md
@@ -111,10 +111,10 @@ def partition(nums, left, right):
    # 以 nums[left] 作为基准数
    i,j=left,right
    base = nums[left]
-   while i<j:
-      while i < j and nums[j] >= base: # 右指针找到第一个小于基准的元素
+   while i<j: # 等号不需要交换
+      while i < j and nums[j] >= base: # 右指针找到第一个小于基准的元素   ！跳过大于等于！
          j -= 1
-      while i < j and nums[i] <= base: # 左指针找到第一个大于基准的元素
+      while i < j and nums[i] <= base: # 左指针找到第一个大于基准的元素   ！跳过小于等于！
          i += 1
       if i < j: # 每次变动序号，都要判断   交换两者
       	 nums[i], nums[j] = nums[j], nums[i] 
@@ -126,7 +126,7 @@ def quicksort(nums, left, right):
     :param left: 排序的起始索引
     :param right: 排序的结束索引
     """
-    # 终止条件   等号指一个数，无需交换排序
+    # 终止条件   等号不需要排序
     if left >= right:
       	return 
     i = partition(nums, left, right) # 基准元素的索引 
@@ -222,13 +222,13 @@ def spiralOrder(matrix):
             result.append(matrix[i][right])
         right -= 1
         
-        # 从右到左遍历行  !!!先判断行是否越界,是否还有行!!!
+        # 从右到左遍历行  !!!先判断是否还有行，等于也可以!!!
         if top <= bottom: 
             for i in range(right, left - 1, -1):
                 result.append(matrix[bottom][i])
             bottom -= 1
         
-        # 从下到上遍历列   !!!先判断列是否越界，是否还有列!!!
+        # 从下到上遍历列   !!!先判断是否还有列 等于也可以!!!
         if left <= right:
             for i in range(bottom, top - 1, -1):
                 result.append(matrix[i][left])
@@ -270,7 +270,7 @@ def reverse_linked_list(head):
         next_node = current.next  # 1. 旧链表保存下一个节点
         current.next = prev  # 2. 将当前节点指向新链表头（翻转指针）
         prev = current  # 3.新链表更新表头
-        current = next_node  # 4. 旧链表更新当前节点
+        current = next_node  # 4. 旧链表更新表头
 
     return prev  # 返回新的头节点
 ```
@@ -287,21 +287,17 @@ def merge_two_lists(l1, l2):
 
     # 遍历两个链表，直到其中一个链表为空
     while l1 and l2:
-        # 比较两个链表的当前节点的值
         if l1.val < l2.val:
-            # 如果 l1 的值更小，将 l1 的节点添加到合并链表中
             current.next = l1
-            l1 = l1.next  # 移动 l1 指针到下一个节点
+            l1 = l1.next  # 更新l1表头
         else:
-            # 如果 l2 的值更小或相等，将 l2 的节点添加到合并链表中
             current.next = l2
-            l2 = l2.next  # 移动 l2 指针到下一个节点
+            l2 = l2.next  # 更新l2表头
         
-        # 移动 current 指针到合并链表的下一个位置
+        # 更新新链表表头
         current = current.next
 
-    # 处理剩余的节点
-    # 只需将 l1 或 l2 中剩余的节点连到合并链表的末尾
+    # 将 剩余的节点连到新链表的末尾
     if l1:
         current.next = l1
     if l2:
