--- a/高频题.md
+++ b/高频题.md
@@ -6,11 +6,73 @@
 
 ### 1. 三数之和⭐️
 
-思路： 排序+ 左右指针，下标每次变更都要跳过重复数  
+思路：（1）排序 + 左右指针  （2）基准 和 记录结果时过滤重复值
+
+​    [links](https://www.programmercarl.com/0015.%E4%B8%89%E6%95%B0%E4%B9%8B%E5%92%8C.html#%E5%85%B6%E4%BB%96%E8%AF%AD%E8%A8%80%E7%89%88%E6%9C%AC)
+
+```python
+class Solution:
+    def threeSum(self, nums: List[int]) -> List[List[int]]:
+        result = []
+        nums.sort()
+        for i in range(len(nums)):
+            # # 第二个元素开始 判断当前元素与之前元素重复则跳过
+            if i > 0 and nums[i] == nums[i - 1]:
+                continue
+                
+            left，right = i + 1，len(nums) - 1
+            while left<right: # 不要等号  必须三个数
+                total = nums[i] + nums[left] + nums[right]
+                if total < 0:
+                    left += 1
+                elif total > 0:
+                    right -= 1
+                else:
+                    result.append([nums[i], nums[left], nums[right]]) # 记录一组解
+                    
+                    # 两者都判断下一个元素，过滤相同解
+                    while left<right and nums[right] == nums[right-1]:
+                        right -= 1
+                    while left<right and nums[left] == nums[left+1]:
+                        left += 1
+                    # 走到相同元素的边界，再走一步
+                    right -= 1
+                    left += 1
+        return result
+```
+
+
 
 ### 2. 接雨水
 
-思路： 1. 构建左最大值数组 、右最大值数组、 2 计算接水量。 两侧柱子不存水
+双指针思路： 1. 构建左最大值数组，包含自身  2. 右最大数组  3. 计算接水量，注意两侧柱子不存水
+
+```python
+class Solution:
+    def trap(self, height: List[int]) -> int:
+        # 边界条件
+        if len(height)<3:
+            return 0
+        
+        # 1. 构建左最大
+        left_max=[0]*len(height)
+        left_max[0]=height[0]
+        for i in range(1,len(height)): 
+            left_max[i]=max(left_max[i-1],height[i])
+        
+        # 2. 构建右最大
+        right_max=[0]*len(height)
+        right_max[-1]=height[-1]
+        for i in range(len(height)-2,-1,-1):
+            right_max[i]=max(right_max[i+1],height[i])
+        # 3. 计算接水量
+        count=0
+        for i in range(1,len(height)-1):
+            count+=max(min(left_max[i],right_max[i])-height[i],0)
+        return count
+```
+
+
 
 ### 3. 数组中的第K个最大元素
 
