--- a/解题方法论.md
+++ b/解题方法论.md
@@ -332,6 +332,10 @@ def merge_two_lists(l1, l2):
 
 #### [层序遍历](https://www.programmercarl.com/0102.%E4%BA%8C%E5%8F%89%E6%A0%91%E7%9A%84%E5%B1%82%E5%BA%8F%E9%81%8D%E5%8E%86.html#_102-%E4%BA%8C%E5%8F%89%E6%A0%91%E7%9A%84%E5%B1%82%E5%BA%8F%E9%81%8D%E5%8E%86)
 
+1. 队列 装入当前层
+2. 遍历当前层节点
+3. 装入当前节点，同时装入对应左右孩子
+
 ```python
 # 利用长度法
 # class TreeNode:
@@ -341,6 +345,7 @@ def merge_two_lists(l1, l2):
 #         self.right = right
 class Solution:
     def levelOrder(self, root: Optional[TreeNode]) -> List[List[int]]:
+        # 边界   空数
         if not root:
             return []
         queue = collections.deque([root]) # deque双端队列  装入根节点
@@ -360,33 +365,6 @@ class Solution:
             result.append(level) # 4. 保存当前层结果
         return result
 ```
-
-```python
-#递归法
-# class TreeNode:
-#     def __init__(self, val=0, left=None, right=None):
-#         self.val = val
-#         self.left = left
-#         self.right = right
-class Solution:
-    def levelOrder(self, root: Optional[TreeNode]) -> List[List[int]]:
-        if not root: #边界
-            return []
-        levels = []
-        def traverse(node, level): # 1. 确定参数和返回值   level指第几层 0~n-1
-            if not node: # 2. 终止条件
-                return
-             # 3. 单层递归逻辑
-            if len(levels) == level: #level从0开始   len从1开始。 如果不同，需要初始化新的一层
-                levels.append([])
-            levels[level].append(node.val)
-            traverse(node.left, level + 1)
-            traverse(node.right, level + 1)
-        traverse(root, 0)
-        return levels
-```
-
-
 
 ## 图论
 
