--- a/解题方法论.md
+++ b/解题方法论.md
@@ -583,7 +583,7 @@ return result
 ### 4. 完全背包
 
 - 求组合（ 无顺序，如凑零钱）：先物品后背包
-- 求排列（有顺序）：先背包后物品  （背包容量的每一个值，都是经过 物品a 和 b 的计算，包含了{a, b} 和 {b, a}两种情况）
+- 求排列（有顺序）：唯一特例  先背包后物品  （背包容量的每一个值，都是经过 物品a 和 b 的计算，包含了{a, b} 和 {b, a}两种情况）
 
 ```python
 # 求组合：先物品后背包
