--- a/解题方法论.md
+++ b/解题方法论.md
@@ -513,7 +513,7 @@ return result
 4. 顺序： 
 
    ```python
-   for i in range(1, n): #物品
+   for i in range(1, n): #物品0已初始化  循环从物品1开始，取值范围 1~n-1 
        for j in range(bagweight + 1): # 背包 0~n
            if j < weight[i]: #背包容量 无法塞入物品i
                dp[i][j] = dp[i-1][j]
@@ -559,16 +559,17 @@ for i in range(1, n + 1):  # 先物品
           	dp[i][j] = max(dp[i-1][j], dp[i-1][j-weights[i-1]] + values[i-1])
         else: 
             dp[i][j] = dp[i-1][j]
+            
+            # 一维
+            dp[j] = max(dp[j], dp[j - weights[i]] + values[i])
 ```
 
-##### 2. 求是否刚好装满
+##### 2. 背包是否刚好装满
 
 ```python
 # 初始化全False   任一为True则为True
 dp[i][j] = dp[i-1][j] or dp[i-1][j-nums[i-1]]
 ```
-
-
 
 ### 3. 完全背包
 
@@ -581,15 +582,13 @@ for i in range(len(weight)):
         dp[j] = max(dp[j], dp[j - weight[i]] + value[i])
 ```
 
-#### （1）求组合
+#### （1）应用场景
 
- 无顺序，如零钱兑换
+##### 1. 求组合无序，例零钱兑换
 
-#### （2）求排列
+##### 2. 求排列有序，例爬楼梯有几种方法
 
-即有几种方法（有顺序，如爬楼梯）：**唯一特例 先背包后物品**    
-
-（背包容量的每一个值，都是经过 物品a 和 b 的计算，包含了{a, b} 和 {b, a}两种情况）
+​	**唯一特例 先背包后物品** （背包容量的每一个值，都是经过 物品a 和 b 的计算，包含了{a, b} 和 {b, a}两种情况）
 
 ```python
 if nums[i-1] <= j: # 物品i能装入
@@ -603,7 +602,7 @@ else: # 无法装入,方案数不增加
 dp[j] += dp[j - nums[i]] 
 ```
 
-#### （3）求背包装满最小物品数
+##### 3. 求背包装满最小物品数
 
 ```python
 #二维dp
@@ -615,7 +614,7 @@ for i in range(1, n + 1):  # 先物品
             dp[i][j] = dp[i-1][j]
 
 # 一维dp
-dp[j] = min(dp[j - coins[i]] + 1, dp[j])
+dp[j] = min( dp[j]，dp[j - coins[i]] + 1)
 ```
 
 ### 4. 子序列
