--- a/解题方法论.md
+++ b/解题方法论.md
@@ -317,15 +317,31 @@ def merge_two_lists(l1, l2):
 2. 确定终止条件
 3. 确定单层递归的逻辑
 
-#### 迭代法
-
-[统一写法](https://www.programmercarl.com/%E4%BA%8C%E5%8F%89%E6%A0%91%E7%9A%84%E7%BB%9F%E4%B8%80%E8%BF%AD%E4%BB%A3%E6%B3%95.html#%E6%80%9D%E8%B7%AF)      
-
-```
-# 用栈实现，所以 倒序。    每次中节点加none
 前序：中左右    迭代是右左中
-中序：左中右     迭代是右左中   
-后序：左右中     迭代是中右左     
+```python
+class Solution:
+    def preorderTraversal(self, root: TreeNode) -> List[int]:
+        res = []
+        
+        def dfs(node):
+            if node is None:
+                return   
+            # 前序  中左右
+            res.append(node.val)
+            dfs(node.left)
+            dfs(node.right)
+            
+            # 中序  左中右
+            #dfs(node.left)
+            #res.append(node.val)
+            #dfs(node.right)
+            
+            # 后续  左右中
+            #dfs(node.left)
+            #dfs(node.right)   
+            #res.append(node.val)
+        dfs(root)
+        return res
 ```
 
 ### 2. 广度优先搜索（BFS）
@@ -334,7 +350,8 @@ def merge_two_lists(l1, l2):
 
 1. 队列初始化  装入根节点
 2. 遍历当前层节点
-3. 装入当前节点，同时装入对应左右孩子
+3. 记录当前节点，同时装入对应左右孩子
+4. 装入当前层所有节点
 
 ```python
 # 利用长度法
