--- a/解题方法论.md
+++ b/解题方法论.md
@@ -504,7 +504,7 @@ return result
 - dp下标定义⭐️⭐️⭐️
 - 递推公式
 - 初始化
-- 遍历顺序     先物后背，谐音吾辈当自强    求排列（特例，先背后物）
+- 遍历顺序     先物后背，谐音**吾辈**当自强    求排列（特例，先背后物）
 - 举例推导dp数组
 
 ### 2. 01背包
@@ -513,28 +513,18 @@ return result
 
 #### （1）[二维dp](https://www.programmercarl.com/%E8%83%8C%E5%8C%85%E7%90%86%E8%AE%BA%E5%9F%BA%E7%A1%8001%E8%83%8C%E5%8C%85-1.html)
 1. dp 定义：dp[i] [j]从下标为0~i的物品中任取，放入容量为j的背包的最大价值。
+   - 物品i取值范围0~n-1
+   - 背包j取值范围0~n   容量从0开始填充，故总长度+1
+2. 递推公式
 
-2. 递推公式:   放物品i和不放物品i两种情况
 
-
-3. 初始化：填充第一行何第一列
+3. 初始化：填充第一行、第一列
 
    ```python
    # 初始化  背包从容量0开始填充，故+1   物品不变
-   dp = [[0] * (bagweight + 1) for _ in range(n)]
-   for j in range(weight[0], bagweight + 1):
+   dp = [[0] * (capacity + 1) for _ in range(n)]
+   for j in range(weight[0], capacity + 1):
        dp[0][j] = value[0]
-   ```
-
-4. 顺序： 
-
-   ```python
-   for i in range(1, n): #物品0已初始化  循环从物品1开始，取值范围 1~n-1 
-       for j in range(bagweight + 1): # 背包 0~n
-           if j < weight[i]: #背包容量 无法塞入物品i
-               dp[i][j] = dp[i-1][j]
-           else:
-               dp[i][j] = max(dp[i-1][j], dp[i-1][j-weight[i]]+value[i])
    ```
 
 
@@ -551,40 +541,40 @@ return result
 3. 初始化
 
    ```python
-   dp = [0] * (bagweight + 1)  # 初始值为0，背包容量从0开始填充，故+1
+   dp = [0] * (capacity + 1)  # 初始值为0，背包容量从0开始填充，故+1
    dp[0] = 0  # 背包容量为0，最大价值为0
    ```
-
-4. 顺序
-
-```python
-for i in range(n): # 物品
-    for j in range(bagweight, weight[i]-1, -1):  # 背包倒序  取值范围背包容量~物品i重量
-      # 每次取得状态不会和之前重合，保证物品i只被放入一次。
-      dp[j] = max(dp[j], dp[j - weight[i]] + value[i])
-```
 
 #### （3）应用场景
 
 ##### 1. 背包装满时最大价值
 
 ```python
-for i in range(1, n + 1):  # 先物品
-    for j in range(capacity + 1):  # 后容量
-        if weights[i - 1]<= j:  # 物品i能装入   物品序号i从1开始，所以i-1才是物品i的价值
-          	dp[i][j] = max(dp[i-1][j], dp[i-1][j-weights[i-1]] + values[i-1])
+# ===========二维dp===========
+for i in range(1, n):  # 先物品  物品0已初始化,后续取值范围 1~n-1 
+    for j in range(capacity + 1):  # 后容量  取值范围0~n
+        if j >= weights[i]: 
+          	dp[i][j] = max(dp[i-1][j], dp[i-1][j-weights[i]] + values[i])
         else: 
             dp[i][j] = dp[i-1][j]
-            
-            # 一维
-            dp[j] = max(dp[j], dp[j - weights[i]] + values[i])
+     
+    
+# ===========一维dp===========
+for i in range(n): # 物品
+    for j in range(capacity, weight[i]-1, -1):  # 背包倒序  取值范围背包容量~物品i重量
+      # 每次取得状态不会和之前重合，保证物品i只被放入一次。
+      dp[j] = max(dp[j], dp[j - weight[i]] + value[i])
 ```
 
-##### 2. 背包是否刚好装满
+##### 2. 背包是否刚好装满❓
 
 ```python
+# ===========二维dp===========
 # 初始化全False   任一为True则为True
-dp[i][j] = dp[i-1][j] or dp[i-1][j-nums[i-1]]
+dp[i][j] = dp[i-1][j] or dp[i-1][j-weight[i]]
+
+# ===========一维dp===========
+xxx
 ```
 
 ### 3. 完全背包
@@ -592,9 +582,9 @@ dp[i][j] = dp[i-1][j] or dp[i-1][j-nums[i-1]]
 唯一区别  **内层正序遍历**，保证物品重复放入
 
 ```python
-dp = [0] * (bagWeight + 1) 
+dp = [0] * (capacity + 1) 
 for i in range(len(weight)): 
-    for j in range(weight[i], bagweight + 1):  # 取值范围 物品i重量~背包容量
+    for j in range(weight[i], capacity + 1):  # 取值范围 物品i重量~背包容量
         dp[j] = max(dp[j], dp[j - weight[i]] + value[i])
 ```
 
