--- a/解题方法论.md
+++ b/解题方法论.md
@@ -597,6 +597,7 @@ for i in range(len(weight)):
 ​	**唯一特例 先背包后物品** （背包容量的每一个值，都是经过 物品a 和 b 的计算，包含了{a, b} 和 {b, a}两种情况）
 
 ```python
+# ===========二维dp===========
 if nums[i-1] <= j: # 物品i能装入
   # dp[i-1][j]：不装入物品i时装满容量为j的方案数
   # dp[i][j - nums[i-1]]：装入物品i时装满容量为j的方案数
@@ -604,14 +605,14 @@ if nums[i-1] <= j: # 物品i能装入
 else: # 无法装入,方案数不增加
   dp[i][j] = dp[i-1][j]
 
-# 一维dp
+# ===========一维dp===========
 dp[j] += dp[j - nums[i]] 
 ```
 
 ##### 3. 求背包装满最小物品数
 
 ```python
-#二维dp
+# ===========二维dp===========
 for i in range(1, n + 1):  # 先物品
     for j in range(1, target + 1):  # 后容量
         if coins[i - 1] <=j :  # 物品i能装入
@@ -619,7 +620,7 @@ for i in range(1, n + 1):  # 先物品
         else: 
             dp[i][j] = dp[i-1][j]
 
-# 一维dp
+# ===========一维dp===========
 dp[j] = min( dp[j]，dp[j - coins[i]] + 1)
 ```
 
