--- a/解题方法论.md
+++ b/解题方法论.md
@@ -547,7 +547,7 @@ return result
 
 #### （3）应用场景
 
-##### 1. 背包装满时最大价值
+##### 1. 只取一次的背包最大价值
 
 ```python
 # ===========二维dp===========
@@ -581,49 +581,224 @@ xxx
 
 唯一区别  **内层正序遍历**，保证物品重复放入
 
+#### （1）应用场景
+
+##### 1. 无限取的背包最大价值
+
 ```python
-dp = [0] * (capacity + 1) 
-for i in range(len(weight)): 
-    for j in range(weight[i], capacity + 1):  # 取值范围 物品i重量~背包容量
+# ===========一维dp===========
+dp = [0] * (bagWeight + 1)
+for i in range(len(weight)):  # 物品
+    for j in range(weight[i], bagWeight + 1):  #背包容量  取值范围 物品i重量~背包容量
         dp[j] = max(dp[j], dp[j - weight[i]] + value[i])
 ```
 
-#### （1）应用场景
+##### 2. 求组合无序，例零钱兑换
 
-##### 1. 求组合无序，例零钱兑换
-
-##### 2. 求排列有序，例爬楼梯有几种方法
+##### 3. 求排列有序，例爬楼梯有几种方法❓
 
 ​	**唯一特例 先背包后物品** （背包容量的每一个值，都是经过 物品a 和 b 的计算，包含了{a, b} 和 {b, a}两种情况）
 
 ```python
-# ===========二维dp===========
-if nums[i-1] <= j: # 物品i能装入
-  # dp[i-1][j]：不装入物品i时装满容量为j的方案数
-  # dp[i][j - nums[i-1]]：装入物品i时装满容量为j的方案数
-  dp[i][j] = dp[i-1][j] + dp[i][j - nums[i-1]]
-else: # 无法装入,方案数不增加
-  dp[i][j] = dp[i-1][j]
+dp = [0]*(n+1) # 最多
+dp[0] = 1
 
-# ===========一维dp===========
-dp[j] += dp[j - nums[i]] 
+if j>=nums[i]: # 物品i能装入
+	dp[j] += dp[j - nums[i]]
 ```
 
-##### 3. 求背包装满最小物品数
+##### 4. 求背包装满最小物品数
 
 ```python
-# ===========二维dp===========
-for i in range(1, n + 1):  # 先物品
-    for j in range(1, target + 1):  # 后容量
-        if coins[i - 1] <=j :  # 物品i能装入
-            dp[i][j] = min(dp[i-1][j], dp[i][j - coins[i - 1]] + 1)
-        else: 
-            dp[i][j] = dp[i-1][j]
+dp = [float('inf')] * (amount + 1)   # 求最小，故初始值无穷大
+dp[0]=0 # 容量为0，则最小物品数为0
 
-# ===========一维dp===========
-dp[j] = min( dp[j]，dp[j - coins[i]] + 1)
+for i in range(n):  # 先物品 取值范围0~n-1
+    for j in range(1, target + 1):  # 后背包   取值范围1~背包容量
+        if j >= coins[i]:  # 物品i能装入
+            dp[j] = min( dp[j]，dp[j - coins[i]] + 1)
+return -1 if dp[amount]==float("inf") else dp[amount]
 ```
 
 ### 4. 子序列
 
-continue
+#### 1. 单词拆分：单词列表是否能拼出字符串（完全背包）
+
+- 递推公式：如果dp[j] 是True，且 [j, i] 这个区间的子串出现在单词列表里，则dp[i]一定是true。（j < i ）
+
+- 求排列有序，先背包后物品
+
+```python
+class Solution:
+    def wordBreak(self, s: str, wordDict: List[str]) -> bool:
+        dp = [False]*(len(s) + 1)
+        dp[0] = True
+        for i in range(1, len(s) + 1):  # 先背包  1~n
+            for j in range(i):# 后物品  j范围0~i-1  i目前未知
+                if dp[j] and s[j:i] in wordDict:
+                    dp[i]=True
+                    break
+        return dp[len(s)]
+```
+
+[Links](https://www.programmercarl.com/0139.%E5%8D%95%E8%AF%8D%E6%8B%86%E5%88%86.html)
+
+#### 2. 最长递增子序列：整数数组中找出最长严格递增子序列的长度
+
+[Links](https://www.programmercarl.com/0300.%E6%9C%80%E9%95%BF%E4%B8%8A%E5%8D%87%E5%AD%90%E5%BA%8F%E5%88%97.html#%E7%AE%97%E6%B3%95%E5%85%AC%E5%BC%80%E8%AF%BE)
+
+1. dp定义: dp[i]表示**0~i范围**且**nums[i]结尾**的最长递增子序列的长度
+2. 递推公式：j从0到i-1各个位置的最长升序子序列 + 1 的最大值
+3. 初始化：每一个i，dp[i]起始大小至少都是1
+
+```python
+class Solution:
+    def lengthOfLIS(self, nums: List[int]) -> int:
+        if len(nums) <= 1:
+            return len(nums)
+        dp = [1] * len(nums)  # 序列长度至少为1
+        dp[0]=1 #初始化
+        for i in range(1, len(nums)): # 从第二个开始看递增子序列  范围1~n-1
+            for j in range(i): # 取值0~i-1
+                if nums[j] < nums[i]: # 大于才有可能成为最长序列的结尾元素
+                    dp[i] = max(dp[i], dp[j] + 1)    
+        return max(dp)
+```
+
+#### 3.  最长公共子序列: 两个字符串的最长公共子序列的长度
+
+<img src="/Users/admin/Library/Application Support/typora-user-images/image-20241211下午104930090.png" alt="image-20241211下午104930090" style="zoom:50%;" />
+
+[Links](https://www.programmercarl.com/1143.%E6%9C%80%E9%95%BF%E5%85%AC%E5%85%B1%E5%AD%90%E5%BA%8F%E5%88%97.html)
+
+1. dp定义：dp[i] [j]长度为0~i-1的字符串text1与长度为0~j-1的字符串text2的最长公共子序列   
+   - 两个字符串都是从空字符开始
+2. 递推公式：
+   - text1[i - 1] 与 text2[j - 1] 单个字符相同，则dp[i] [j] = dp[i - 1] [j - 1] + 1
+   - text1[i - 1] 与 text2[j - 1]单个字符不相同，则dp[i] [j] = max(dp[i - 1] [j], dp[i] [j - 1])
+3. 初始化：dp[i] [0] = 0     dp[0] [j]=0
+
+4. 顺序
+
+   <img src="/Users/admin/Library/Application Support/typora-user-images/image-20241211下午105348197.png" alt="image-20241211下午105348197" style="zoom:50%;" />
+
+5. 举例
+
+```python
+class Solution:
+    def longestCommonSubsequence(self, text1: str, text2: str) -> int:
+        # 两个字符串都从空开始 故都加1    text1是行   text2是列
+        dp = [[0] * (len(text2) + 1) for _ in range(len(text1) + 1)]
+        
+        for i in range(1, len(text1) + 1): # text1 范围1~n
+            for j in range(1, len(text2) + 1): # text2 范围1~n 
+              	# 如果当前两个字符相等，则左上角位置+1
+                if text1[i-1] == text2[j-1]: # 0代表空字符,所以取i j对应的值都需要-1  
+                    dp[i][j] = dp[i-1][j-1] + 1
+                else:
+                    # 如果不等，则当前位置的最长公共子序列长度为上方或左方的较大值
+                    dp[i][j] = max(dp[i-1][j], dp[i][j-1])
+        
+        # 返回最长公共子序列的长度
+        return dp[len(text1)][len(text2)]
+```
+
+
+
+#### 4. 最长回文子串
+
+[Links](https://github.com/youngyangyang04/leetcode-master/blob/34990fb96f42f370e7d605cbad1e731018c3922d/problems/0005.%E6%9C%80%E9%95%BF%E5%9B%9E%E6%96%87%E5%AD%90%E4%B8%B2.md)
+
+动态规划
+
+```python
+# 动态规划
+class Solution:
+    def countSubstrings(self, s: str) -> int:
+        dp = [[False] * len(s) for _ in range(len(s))]
+        result = 0
+        for i in range(len(s)-1, -1, -1): #注意遍历顺序
+            for j in range(i, len(s)):
+                if s[i] == s[j]:
+                    if j - i <= 1: #情况一 和 情况二
+                        result += 1
+                        dp[i][j] = True
+                    elif dp[i+1][j-1]: #情况三
+                        result += 1
+                        dp[i][j] = True
+        return result
+```
+
+双指针
+
+```python
+class Solution:
+    def longestPalindrome(self, s: str) -> str:
+        # 奇数子串  偶数子串
+        def expand(left,right,s):
+            # 往外拓展 找最长子串
+            while left>=0 and right<len(s) and s[left]==s[right]:
+                left-=1
+                right+=1
+            return s[left+1:right] # while循环终止时，多往外扩了 所以回来   左开右闭
+        
+        long_str=""
+        for i in range(len(s)):
+            odd_str= expand(i,i,s)
+            even_str=expand(i,i+1,s)
+            long_str = max(long_str,odd_str,even_str,key=len)
+        return long_str
+```
+
+#### 5. 最短编辑距离: 两个单词 word1 和 word2，将 word1 转换成 word2 所使用的最少操作数 
+
+[Links](https://www.programmercarl.com/0072.%E7%BC%96%E8%BE%91%E8%B7%9D%E7%A6%BB.html#%E7%AE%97%E6%B3%95%E5%85%AC%E5%BC%80%E8%AF%BE)
+
+1. dp定义：dp[i] [j] 表示以下标i-1为结尾的字符串word1，和以下标j-1为结尾的字符串word2的最短编辑次数
+
+2. 递推公式
+
+   - 如果当前两个元素相等，则不操作 `dp[i] [j] = dp[i-1] [j-1]`
+
+   - 不相等，需要增删改  `min(dp[i-1][j]+1, dp[i][j-1]+1), dp[i-1][j-1]+1)`
+
+     - 删除/增加：word1删除则`dp[i-1][j]+1`   或者  word2删除 `dp[i][j-1]+1)`
+
+       word1删除一个字符   等价于 word2增加一个字符
+
+     - 改：`dp[i-1][j-1]+1`
+
+3. 顺序
+
+   <img src="/Users/admin/Library/Application Support/typora-user-images/image-20241211下午115724714.png" alt="image-20241211下午115724714" style="zoom:50%;" />
+
+```python
+class Solution:
+    def minDistance(self, word1: str, word2: str) -> int:
+        # word1 行   word2列  从空开始,下标1~n才代表元素
+        # dp[i][j]  word1是0~i-1 word2是0~j-1 的最小编辑距离
+        # 递推公式
+            # 当前两个元素如果相等，则dp[i-1][j-1]
+            # 不等，需要 插入/删除  等价。或  替换， 取最小
+            	# 删除  dp[i-1][j]+1   dp[i][j-1]   
+            	# 替换 dp[i-1][j-1]+1 
+        dp=[ [float("inf")] * (len(word2)+1)  for _ in range(len(word1)+1)]
+
+        # 初始化
+        dp[0][0]=0
+        for i in range(1,len(word1)+1): # 取值范围1~n
+            dp[i][0]=i
+        for j in range(1,len(word2)+1): # 取值范围1~n
+            dp[0][j]=j
+        
+        for i in range(1,len(word1)+1):
+            for j in range(1,len(word2)+1):
+                # 当前元素是否相等
+                if word1[i-1]==word2[j-1]:
+                    dp[i][j]=dp[i-1][j-1]
+                else:
+                    # 删除  插入等价
+                    dp[i][j]=min(dp[i-1][j]+1,dp[i][j-1]+1,dp[i-1][j-1]+1)
+        return dp[-1][-1]
+```
+
