--- a/解题方法论.md
+++ b/解题方法论.md
@@ -12,28 +12,24 @@
 class Solution:
     def decodeString(self, s: str) -> str:
         stack=[] 
-        cur_str="" # 存储当前字符串
-        cur_num=0 # 存储当前重复数字
+        cur_str="" # 存储已解码的字符串
+        cur_num=0 # 存储即将解码的数字
 
-        for char in s:
-            # 数字  可能出现连续数字
-            if char.isdigit():
+        for char in s: # char4种可能
+            if char.isdigit(): # 连续数字
                 cur_num=cur_num*10+int(char)
-            # [
             elif char=="[":
-                # 入栈  保存之前的字符串 + 将要重复的数字
+                # 入栈  保存已解码的字符串 + 即将解码的数字
                 stack.append([cur_str,cur_num])
-                # 恢复
+                # 清空
                 cur_str=""
                 cur_num=0
-            # ]
             elif char =="]":
                 # 出栈
                 pre_str,nums=stack.pop()
                 cur_str=pre_str+ cur_str*nums # 当前字符串是要重复的目标
-            # 字母
             else:
-                cur_str+=char
+                cur_str+=char # 字母
         return cur_str
 ```
 
@@ -111,10 +107,10 @@ def partition(nums, left, right):
    # 以 nums[left] 作为基准数
    i,j=left,right
    base = nums[left]
-   while i<j: # 等号不需要交换
-      while i < j and nums[j] >= base: # 右指针找到第一个小于基准的元素   ！跳过大于等于！
+   while i<j: # 等号 不需要交换
+      while i < j and nums[j] >= base: # 右指针找到第一个小于基准的元素，准备交换  
          j -= 1
-      while i < j and nums[i] <= base: # 左指针找到第一个大于基准的元素   ！跳过小于等于！
+      while i < j and nums[i] <= base: # 左指针找到第一个大于基准的元素，准备交换
          i += 1
       if i < j: # 每次变动序号，都要判断   交换两者
       	 nums[i], nums[j] = nums[j], nums[i] 
