--- a/解题方法论.md
+++ b/解题方法论.md
@@ -218,13 +218,13 @@ def spiralOrder(matrix):
             result.append(matrix[i][right])
         right -= 1
         
-        # 从右到左遍历行  !!!先判断是否还有行，等于也可以!!!
+        # 从右到左遍历行  !!!先判断是否还有行!!!
         if top <= bottom: 
             for i in range(right, left - 1, -1):
                 result.append(matrix[bottom][i])
             bottom -= 1
         
-        # 从下到上遍历列   !!!先判断是否还有列 等于也可以!!!
+        # 从下到上遍历列   !!!先判断是否还有列!!!
         if left <= right:
             for i in range(bottom, top - 1, -1):
                 result.append(matrix[i][left])
@@ -343,10 +343,10 @@ class Solution:
 
 #### [层序遍历](https://www.programmercarl.com/0102.%E4%BA%8C%E5%8F%89%E6%A0%91%E7%9A%84%E5%B1%82%E5%BA%8F%E9%81%8D%E5%8E%86.html#_102-%E4%BA%8C%E5%8F%89%E6%A0%91%E7%9A%84%E5%B1%82%E5%BA%8F%E9%81%8D%E5%8E%86)
 
-1. 队列初始化  装入根节点
+1. 初始化队列 ,装入根节点
 2. 遍历当前层节点
 3. 记录当前节点，同时装入对应左右孩子
-4. 装入当前层所有节点
+4. 装入当前层所有节点值
 
 ```python
 # 利用长度法
@@ -455,10 +455,10 @@ class Solution:
                     nx, ny = x + dx, y + dy
                     # 判断新位置是否有效且是新鲜橘子
                     if 0 <= nx < len(grid) and 0 <= ny < len(grid[0]) and grid[nx][ny] == 1:
-                        grid[nx][ny] = 2  # 将新鲜橘子腐烂
-                        fresh_nums -= 1  # 新鲜橘子数量减少
-                        deq.append((nx, ny))  # 将新腐烂的橘子加入队列
-            time += 1  # 每次while结束，时间增加
+                        grid[nx][ny] = 2  # 1.将新鲜橘子腐烂
+                        fresh_nums -= 1  # 2.新鲜橘子数量减少
+                        deq.append((nx, ny))  # 3.将新腐烂的橘子加入第二波队列
+            time += 1  # 第一波传染完毕，次数+1
 
         # 最后一次传播是多余的，所以-1
 
@@ -483,7 +483,7 @@ def backtracking(result,path,xxx):
     if 终止条件:
         result.append(path[:])  # 存放结果 必须[:]返回新列表
         return   #返回
-    for i in range(len(xxx)): # 数组左闭右开[ ), 结尾剪枝
+    for i in range(len(xxx)): #  结尾剪枝
         处理当前值
         backtrack(path,result,xxx)  # 如果有startIndex， i表示可重复  i+1不能重复取
         撤销当前值
@@ -596,7 +596,7 @@ for i in range(len(weight)):  # 物品
 ​	**唯一特例 先背包后物品** （背包容量的每一个值，都是经过 物品a 和 b 的计算，包含了{a, b} 和 {b, a}两种情况）
 
 ```python
-dp = [0]*(n+1) # 最多
+dp = [0]*(n+1) 
 dp[0] = 1
 
 if j>=nums[i]: # 物品i能装入
