--- a/高频题.md
+++ b/高频题.md
@@ -15,7 +15,7 @@ class Solution:
     def threeSum(self, nums: List[int]) -> List[List[int]]:
         result = []
         nums.sort()
-        for i in range(len(nums)):
+        for i in range(len(nums)-2): # 0~n-3  必须三个数
             # # 第二个元素开始 判断当前元素与之前元素重复则跳过
             if i > 0 and nums[i] == nums[i - 1]:
                 continue
@@ -136,8 +136,6 @@ class Solution:
 
 [links](https://github.com/youngyangyang04/leetcode-master/blob/d3ae53e107a871c73b2d08094d586a9b711ee105/problems/0005.%E6%9C%80%E9%95%BF%E5%9B%9E%E6%96%87%E5%AD%90%E4%B8%B2.md)
 
-[Links](https://github.com/youngyangyang04/leetcode-master/blob/34990fb96f42f370e7d605cbad1e731018c3922d/problems/0005.%E6%9C%80%E9%95%BF%E5%9B%9E%E6%96%87%E5%AD%90%E4%B8%B2.md)
-
 动态规划
 
 ```python
@@ -169,7 +167,7 @@ class Solution:
             while left>=0 and right<len(s) and s[left]==s[right]:
                 left-=1
                 right+=1
-            return s[left+1:right] # while循环终止时，多往外扩了 所以回来   左开右闭
+            return s[left+1:right] # while终止时，往外多扩了一次  所以左开右闭
         
         long_str=""
         for i in range(len(s)):
