--- a/高频题.md
+++ b/高频题.md
@@ -241,7 +241,7 @@ class Solution:
         return max(dp)
 ```
 
-### 5 .单词拆分
+### 5 . 单词拆分- 背包正好装满
 
 [Links](https://www.programmercarl.com/0139.%E5%8D%95%E8%AF%8D%E6%8B%86%E5%88%86.html)  单词列表是否能拼出字符串（完全背包）
 
@@ -254,7 +254,7 @@ class Solution:
     def wordBreak(self, s: str, wordDict: List[str]) -> bool:
         dp = [False]*(len(s) + 1)
         dp[0] = True
-        for i in range(1, len(s) + 1):  # 先背包  1~n
+        for i in range(1, len(s) + 1):  # 先背包  1~n   背包还是从0开始
             for j in range(i):# 后物品  j范围0~i-1  i目前未知
                 if dp[j] and s[j:i] in wordDict:
                     dp[i]=True
