--- a/解题方法论.md
+++ b/解题方法论.md
@@ -497,11 +497,11 @@ return result
 
 ### 1. 动态规划5步骤
 
-- dp下标定义⭐️⭐️⭐️
-- 递推公式
+- dp下标定义⭐️⭐️⭐️       明确下标 i 取值范围、长度，以及对应元素的取值范围
+- 递推公式      判断当前物品是否能装入背包
 - 初始化
 - 遍历顺序     先物后背，谐音**吾辈**当自强    求排列（特例，先背后物）
-- 举例推导dp数组
+- 举例推导dp数组    
 
 ### 2. 01背包
 
@@ -562,22 +562,31 @@ for i in range(n): # 物品
       dp[j] = max(dp[j], dp[j - weight[i]] + value[i])
 ```
 
-##### 2. 背包是否刚好装满❓
+##### 2. 背包是否刚好装满
+
+[分割等和子集](https://www.programmercarl.com/0416.%E5%88%86%E5%89%B2%E7%AD%89%E5%92%8C%E5%AD%90%E9%9B%86.html#%E7%AE%97%E6%B3%95%E5%85%AC%E5%BC%80%E8%AF%BE)   正好凑出sum/2    01背包 求组合 
 
 ```python
-# ===========二维dp===========
-# 初始化全False   任一为True则为True
-dp[i][j] = dp[i-1][j] or dp[i-1][j-weight[i]]
+total_sum = sum(nums)
+if total_sum % 2 != 0: # 总和的一半 能被2整除
+    return False
 
-# ===========一维dp===========
-xxx
+target_sum = total_sum // 2
+dp = [False] * (target_sum + 1) 
+dp[0] = True
+
+for num in nums: # 先物品
+    for i in range(target_sum, 0, -1): # 背包 逆序n~1
+        # 判断背包容量是否装入物品
+        if i>=num:
+        		dp[i] = dp[i] or dp[i - num]
+return dp[target_sum]
+
 ```
 
 ### 3. 完全背包
 
 唯一区别  **内层正序遍历**，保证物品重复放入
-
-#### （1）应用场景
 
 ##### 1. 无限取的背包最大价值
 
@@ -591,7 +600,7 @@ for i in range(len(weight)):  # 物品
 
 ##### 2. 求组合无序，例零钱兑换
 
-##### 3. 求排列有序，例爬楼梯有几种方法❓
+##### 3. 求排列有序，例爬楼梯有几种方法
 
 ​	**唯一特例 先背包后物品** （背包容量的每一个值，都是经过 物品a 和 b 的计算，包含了{a, b} 和 {b, a}两种情况）
 
@@ -616,6 +625,29 @@ for i in range(n):  # 先物品 取值范围0~n-1
 return -1 if dp[amount]==float("inf") else dp[amount]
 ```
 
-### 4. 子序列
-见高频题
+### 4. 子序列 
+
+##### 1. 单词拆分：单词列表正好拼出字符串
+
+[单词拆分](https://www.programmercarl.com/0139.%E5%8D%95%E8%AF%8D%E6%8B%86%E5%88%86.html)   完全背包  求排列，先背包后物品
+
+(1)定义  dp[i] 字符串前i个元素，即（下标从0~i-1）是否能拼出   i取值范围 0凑数表示空，下标1~n对应元素s[0~n-1]   False拼不出   True能拼出
+(2)递推公式  dp[i] 依赖于  0<=j<i  dp[j]=True 且s[j:i]出现在wordDict，则dp[i]=True
+(3)初始化   dp[0]=True
+(4)顺序    先背包后物品
+
+```python
+dp=[False] *(len(s)+1) # 多一个空字符
+dp[0]=True
+
+for i in range(1,len(s)+1):  # 背包1~n
+    for j in range(i): # j 0~i-1  因为i还没开始算
+        #判断当前是否拼出
+        if dp[j] and s[j:i] in wordDict: # sj~i-1
+            dp[i]=True
+            break
+return dp[-1]
+```
+
+2. 见高频题
 
