--- a/高频题.md
+++ b/高频题.md
@@ -78,6 +78,10 @@ class Solution:
 
 思路：快排取K    堆排序   
 
+```python
+
+```
+
 ## 动态规划
 
 ### 1. 最短编辑距离⭐️
@@ -100,7 +104,11 @@ class Solution:
 
 3. 顺序
 
-   <img src="/Users/admin/Library/Application Support/typora-user-images/image-20241211下午115724714.png" alt="image-20241211下午115724714" style="zoom:50%;" />
+   <img src="./assets/image-20241213下午33015685.png" alt="image-20241211下午115724714" style="zoom:50%;" />
+
+   
+
+   
 
 ```python
 class Solution:
@@ -181,7 +189,7 @@ class Solution:
 
 [Links](https://www.programmercarl.com/1143.%E6%9C%80%E9%95%BF%E5%85%AC%E5%85%B1%E5%AD%90%E5%BA%8F%E5%88%97.html)  两个字符串的最长公共子序列的长度
 
-<img src="/Users/admin/Library/Application Support/typora-user-images/image-20241211下午104930090.png" alt="image-20241211下午104930090" style="zoom:50%;" />
+<img src="./assets/image-20241211下午104930090.png" alt="image-20241211下午104930090" style="zoom:50%;" />
 
 [Links](https://www.programmercarl.com/1143.%E6%9C%80%E9%95%BF%E5%85%AC%E5%85%B1%E5%AD%90%E5%BA%8F%E5%88%97.html)
 
@@ -194,7 +202,7 @@ class Solution:
 
 4. 顺序
 
-   <img src="/Users/admin/Library/Application Support/typora-user-images/image-20241211下午105348197.png" alt="image-20241211下午105348197" style="zoom:50%;" />
+   <img src="./assets/image-20241211下午105348197.png" alt="image-20241211下午105348197" style="zoom:50%;" />
 
 5. 举例
 
